sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value echanger
      echanger(i,i+ecart)
      ^